--- a/arch/arm64/boot/dts/renesas/r8a779a0.dtsi
+++ b/arch/arm64/boot/dts/renesas/r8a779a0.dtsi
@@ -8,6 +8,7 @@
 #include <dt-bindings/clock/r8a779a0-cpg-mssr.h>
 #include <dt-bindings/interrupt-controller/arm-gic.h>
 #include <dt-bindings/power/r8a779a0-sysc.h>
+#include <dt-bindings/ipmmu/rcar-ipmmu.h>
 
 / {
 	compatible = "renesas,r8a779a0";
@@ -1678,6 +1679,7 @@
 			power-domains = <&sysc R8A779A0_PD_A3VIP0>;
 			resets = <&cpg 1>;
 			linux,uio-name = "stv_sts_00";
+			ipmmu-id = <RCAR_IPMMU_VIP1>;
 		};
 
 		stv_err_00 {
@@ -1688,6 +1690,7 @@
 			power-domains = <&sysc R8A779A0_PD_A3VIP0>;
 			resets = <&cpg 1>;
 			linux,uio-name = "stv_err_00";
+			ipmmu-id = <RCAR_IPMMU_VIP1>;
 		};
 
 		stv_sts_01 {
@@ -1698,6 +1701,7 @@
 			power-domains = <&sysc R8A779A0_PD_A3VIP0>;
 			resets = <&cpg 2>;
 			linux,uio-name = "stv_sts_01";
+			ipmmu-id = <RCAR_IPMMU_VIP1>;
 		};
 
 		stv_err_01 {
@@ -1708,6 +1712,7 @@
 			power-domains = <&sysc R8A779A0_PD_A3VIP0>;
 			resets = <&cpg 2>;
 			linux,uio-name = "stv_err_01";
+			ipmmu-id = <RCAR_IPMMU_VIP1>;
 		};
 
 		dof_sts_00 {
@@ -1718,6 +1723,7 @@
 			power-domains = <&sysc R8A779A0_PD_A3VIP1>;
 			resets = <&cpg 9>;
 			linux,uio-name = "dof_sts_00";
+			ipmmu-id = <RCAR_IPMMU_VIP0>;
 		};
 
 		dof_err_00 {
@@ -1728,6 +1734,7 @@
 			power-domains = <&sysc R8A779A0_PD_A3VIP1>;
 			resets = <&cpg 9>;
 			linux,uio-name = "dof_err_00";
+			ipmmu-id = <RCAR_IPMMU_VIP0>;
 		};
 
 		dof_sts_01 {
@@ -1738,6 +1745,7 @@
 			power-domains = <&sysc R8A779A0_PD_A3VIP3>;
 			resets = <&cpg 10>;
 			linux,uio-name = "dof_sts_01";
+			ipmmu-id = <RCAR_IPMMU_VIP1>;
 		};
 
 		dof_err_01 {
@@ -1748,6 +1756,7 @@
 			power-domains = <&sysc R8A779A0_PD_A3VIP3>;
 			resets = <&cpg 10>;
 			linux,uio-name = "dof_err_01";
+			ipmmu-id = <RCAR_IPMMU_VIP1>;
 		};
 
 		acf_sts_00 {
@@ -1758,6 +1767,7 @@
 			power-domains = <&sysc R8A779A0_PD_A3VIP2>;
 			resets = <&cpg 11>;
 			linux,uio-name = "acf_sts_00";
+			ipmmu-id = <RCAR_IPMMU_VIP1>;
 		};
 
 		acf_err_00 {
@@ -1768,6 +1778,7 @@
 			power-domains = <&sysc R8A779A0_PD_A3VIP2>;
 			resets = <&cpg 11>;
 			linux,uio-name = "acf_err_00";
+			ipmmu-id = <RCAR_IPMMU_VIP1>;
 		};
 
 		acf_sts_01 {
@@ -1778,6 +1789,7 @@
 			power-domains = <&sysc R8A779A0_PD_A3VIP2>;
 			resets = <&cpg 12>;
 			linux,uio-name = "acf_sts_01";
+			ipmmu-id = <RCAR_IPMMU_VIP1>;
 		};
 
 		acf_err_01 {
@@ -1788,6 +1800,7 @@
 			power-domains = <&sysc R8A779A0_PD_A3VIP2>;
 			resets = <&cpg 12>;
 			linux,uio-name = "acf_err_01";
+			ipmmu-id = <RCAR_IPMMU_VIP1>;
 		};
 
 		acf_sts_02 {
@@ -1798,6 +1811,7 @@
 			power-domains = <&sysc R8A779A0_PD_A3VIP2>;
 			resets = <&cpg 13>;
 			linux,uio-name = "acf_sts_02";
+			ipmmu-id = <RCAR_IPMMU_VIP1>;
 		};
 
 		acf_err_02 {
@@ -1808,6 +1822,7 @@
 			power-domains = <&sysc R8A779A0_PD_A3VIP2>;
 			resets = <&cpg 13>;
 			linux,uio-name = "acf_err_02";
+			ipmmu-id = <RCAR_IPMMU_VIP1>;
 		};
 
 		acf_sts_03 {
@@ -1818,6 +1833,7 @@
 			power-domains = <&sysc R8A779A0_PD_A3VIP2>;
 			resets = <&cpg 14>;
 			linux,uio-name = "acf_sts_03";
+			ipmmu-id = <RCAR_IPMMU_VIP1>;
 		};
 
 		acf_err_03 {
@@ -1828,6 +1844,7 @@
 			power-domains = <&sysc R8A779A0_PD_A3VIP2>;
 			resets = <&cpg 14>;
 			linux,uio-name = "acf_err_03";
+			ipmmu-id = <RCAR_IPMMU_VIP1>;
 		};
 
 		imrlx4_ims0: ims@fe860000 {
@@ -1838,6 +1855,7 @@
 			power-domains = <&sysc R8A779A0_PD_ALWAYS_ON>;
 			resets = <&cpg 529>;
 			linux,uio-name = "imrlx4_ims_00";
+			ipmmu-id = <RCAR_IPMMU_VC0>;
 		};
 
 		imrlx4_ims1: ims@fe870000 {
@@ -1848,6 +1866,7 @@
 			power-domains = <&sysc R8A779A0_PD_ALWAYS_ON>;
 			resets = <&cpg 530>;
 			linux,uio-name = "imrlx4_ims_01";
+			ipmmu-id = <RCAR_IPMMU_VC0>;
 		};
 
 		imrlx4_imr0: imr@fe880000 {
@@ -1858,6 +1877,7 @@
 			power-domains = <&sysc R8A779A0_PD_ALWAYS_ON>;
 			resets = <&cpg 525>;
 			linux,uio-name = "imrlx4_imr_00";
+			ipmmu-id = <RCAR_IPMMU_VC0>;
 		};
 
 		imrlx4_imr1: imr@fe890000 {
@@ -1868,6 +1888,7 @@
 			power-domains = <&sysc R8A779A0_PD_ALWAYS_ON>;
 			resets = <&cpg 526>;
 			linux,uio-name = "imrlx4_imr_01";
+			ipmmu-id = <RCAR_IPMMU_VC0>;
 		};
 
 		imrlx4_imr2: imr@fe8a0000 {
@@ -1878,6 +1899,7 @@
 			power-domains = <&sysc R8A779A0_PD_ALWAYS_ON>;
 			resets = <&cpg 527>;
 			linux,uio-name = "imrlx4_imr_02";
+			ipmmu-id = <RCAR_IPMMU_VC0>;
 		};
 
 		imrlx4_imr3: imr@fe8b0000 {
@@ -1888,6 +1910,7 @@
 			power-domains = <&sysc R8A779A0_PD_ALWAYS_ON>;
 			resets = <&cpg 528>;
 			linux,uio-name = "imrlx4_imr_03";
+			ipmmu-id = <RCAR_IPMMU_VC0>;
 		};
 
 		vspd0: vsp@fea20000 {
@@ -1974,6 +1997,7 @@
 			resets = <&cpg 415>;
 			linux,uio-name = "dsi_00";
 			status = "disabled";
+			ipmmu-id = <RCAR_IPMMU_VI1>;
 
 			ports {
 				#address-cells = <1>;
@@ -2034,6 +2058,7 @@
 			renesas,isp = <&isp0>;
 			linux,uio-name = "vin_00";
 			status = "disabled";
+			ipmmu-id = <RCAR_IPMMU_VI0>;
 
 			ports {
 				#address-cells = <1>;
@@ -2064,6 +2089,7 @@
 			renesas,isp = <&isp0>;
 			linux,uio-name = "vin_01";
 			status = "disabled";
+			ipmmu-id = <RCAR_IPMMU_VI0>;
 
 			ports {
 				#address-cells = <1>;
@@ -2094,6 +2120,7 @@
 			renesas,isp = <&isp0>;
 			linux,uio-name = "vin_02";
 			status = "disabled";
+			ipmmu-id = <RCAR_IPMMU_VI0>;
 
 			ports {
 				#address-cells = <1>;
@@ -2124,6 +2151,7 @@
 			renesas,isp = <&isp0>;
 			linux,uio-name = "vin_03";
 			status = "disabled";
+			ipmmu-id = <RCAR_IPMMU_VI0>;
 
 			ports {
 				#address-cells = <1>;
@@ -2153,6 +2181,7 @@
 			renesas,id = <4>;
 			linux,uio-name = "vin_04";
 			status = "disabled";
+			ipmmu-id = <RCAR_IPMMU_VI0>;
 		};
 
 		vin05: video@e6ef5000 {
@@ -2165,6 +2194,7 @@
 			renesas,id = <5>;
 			linux,uio-name = "vin_05";
 			status = "disabled";
+			ipmmu-id = <RCAR_IPMMU_VI0>;
 		};
 
 		vin06: video@e6ef6000 {
@@ -2177,6 +2207,7 @@
 			renesas,id = <6>;
 			linux,uio-name = "vin_06";
 			status = "disabled";
+			ipmmu-id = <RCAR_IPMMU_VI0>;
 		};
 
 		vin07: video@e6ef7000 {
@@ -2189,6 +2220,7 @@
 			renesas,id = <7>;
 			linux,uio-name = "vin_07";
 			status = "disabled";
+			ipmmu-id = <RCAR_IPMMU_VI0>;
 		};
 
 		vin10: video@e6ef8000 {
@@ -2202,6 +2234,7 @@
 			renesas,isp = <&isp1>;
 			linux,uio-name = "vin_10";
 			status = "disabled";
+			ipmmu-id = <RCAR_IPMMU_VI0>;
 
 			ports {
 				#address-cells = <1>;
@@ -2232,6 +2265,7 @@
 			renesas,isp = <&isp1>;
 			linux,uio-name = "vin_11";
 			status = "disabled";
+			ipmmu-id = <RCAR_IPMMU_VI0>;
 
 			ports {
 				#address-cells = <1>;
@@ -2262,6 +2296,7 @@
 			renesas,isp = <&isp1>;
 			linux,uio-name = "vin_12";
 			status = "disabled";
+			ipmmu-id = <RCAR_IPMMU_VI0>;
 
 			ports {
 				#address-cells = <1>;
@@ -2292,6 +2327,7 @@
 			renesas,isp = <&isp1>;
 			linux,uio-name = "vin_13";
 			status = "disabled";
+			ipmmu-id = <RCAR_IPMMU_VI0>;
 
 			ports {
 				#address-cells = <1>;
@@ -2321,6 +2357,7 @@
 			renesas,id = <12>;
 			linux,uio-name = "vin_14";
 			status = "disabled";
+			ipmmu-id = <RCAR_IPMMU_VI0>;
 		};
 
 		vin15: video@e6efd000 {
@@ -2333,6 +2370,7 @@
 			renesas,id = <13>;
 			linux,uio-name = "vin_15";
 			status = "disabled";
+			ipmmu-id = <RCAR_IPMMU_VI0>;
 		};
 
 		vin16: video@e6efe000 {
@@ -2345,6 +2383,7 @@
 			renesas,id = <14>;
 			linux,uio-name = "vin_16";
 			status = "disabled";
+			ipmmu-id = <RCAR_IPMMU_VI0>;
 		};
 
 		vin17: video@e6eff000 {
@@ -2357,6 +2396,7 @@
 			renesas,id = <15>;
 			linux,uio-name = "vin_17";
 			status = "disabled";
+			ipmmu-id = <RCAR_IPMMU_VI0>;
 		};
 
 		vin20: video@e6ed0000 {
@@ -2370,6 +2410,7 @@
 			renesas,isp = <&isp2>;
 			linux,uio-name = "vin_20";
 			status = "disabled";
+			ipmmu-id = <RCAR_IPMMU_VI0>;
 
 			ports {
 				#address-cells = <1>;
@@ -2400,6 +2441,7 @@
 			renesas,isp = <&isp2>;
 			linux,uio-name = "vin_21";
 			status = "disabled";
+			ipmmu-id = <RCAR_IPMMU_VI0>;
 
 			ports {
 				#address-cells = <1>;
@@ -2430,6 +2472,7 @@
 			renesas,isp = <&isp2>;
 			linux,uio-name = "vin_22";
 			status = "disabled";
+			ipmmu-id = <RCAR_IPMMU_VI0>;
 
 			ports {
 				#address-cells = <1>;
@@ -2460,6 +2503,7 @@
 			renesas,isp = <&isp2>;
 			linux,uio-name = "vin_23";
 			status = "disabled";
+			ipmmu-id = <RCAR_IPMMU_VI0>;
 
 			ports {
 				#address-cells = <1>;
@@ -2489,6 +2533,7 @@
 			renesas,id = <20>;
 			linux,uio-name = "vin_24";
 			status = "disabled";
+			ipmmu-id = <RCAR_IPMMU_VI0>;
 		};
 
 		vin25: video@e6ed5000 {
@@ -2501,6 +2546,7 @@
 			renesas,id = <21>;
 			linux,uio-name = "vin_25";
 			status = "disabled";
+			ipmmu-id = <RCAR_IPMMU_VI0>;
 		};
 
 		vin26: video@e6ed6000 {
@@ -2513,6 +2559,7 @@
 			renesas,id = <22>;
 			linux,uio-name = "vin_26";
 			status = "disabled";
+			ipmmu-id = <RCAR_IPMMU_VI0>;
 		};
 
 		vin27: video@e6ed7000 {
@@ -2525,6 +2572,7 @@
 			renesas,id = <23>;
 			linux,uio-name = "vin_27";
 			status = "disabled";
+			ipmmu-id = <RCAR_IPMMU_VI0>;
 		};
 
 		vin30: video@e6ed8000 {
@@ -2538,6 +2586,7 @@
 			renesas,isp = <&isp3>;
 			linux,uio-name = "vin_30";
 			status = "disabled";
+			ipmmu-id = <RCAR_IPMMU_VI0>;
 
 			ports {
 				#address-cells = <1>;
@@ -2568,6 +2617,7 @@
 			renesas,isp = <&isp3>;
 			linux,uio-name = "vin_31";
 			status = "disabled";
+			ipmmu-id = <RCAR_IPMMU_VI0>;
 
 			ports {
 				#address-cells = <1>;
@@ -2598,6 +2648,7 @@
 			renesas,isp = <&isp3>;
 			linux,uio-name = "vin_32";
 			status = "disabled";
+			ipmmu-id = <RCAR_IPMMU_VI0>;
 
 			ports {
 				#address-cells = <1>;
@@ -2628,6 +2679,7 @@
 			renesas,isp = <&isp3>;
 			linux,uio-name = "vin_33";
 			status = "disabled";
+			ipmmu-id = <RCAR_IPMMU_VI0>;
 
 			ports {
 				#address-cells = <1>;
@@ -2657,6 +2709,7 @@
 			renesas,id = <28>;
 			linux,uio-name = "vin_34";
 			status = "disabled";
+			ipmmu-id = <RCAR_IPMMU_VI0>;
 		};
 
 		vin35: video@e6edd000 {
@@ -2669,6 +2722,7 @@
 			renesas,id = <29>;
 			linux,uio-name = "vin_35";
 			status = "disabled";
+			ipmmu-id = <RCAR_IPMMU_VI0>;
 		};
 
 		vin36: video@e6ede000 {
@@ -2681,6 +2735,7 @@
 			renesas,id = <30>;
 			linux,uio-name = "vin_36";
 			status = "disabled";
+			ipmmu-id = <RCAR_IPMMU_VI0>;
 		};
 
 		vin37: video@e6edf000 {
@@ -2693,6 +2748,7 @@
 			renesas,id = <31>;
 			linux,uio-name = "vin_37";
 			status = "disabled";
+			ipmmu-id = <RCAR_IPMMU_VI0>;
 		};
 
 		csi40: csi2@feaa0000 {
@@ -2861,6 +2917,7 @@
 			power-domains = <&sysc R8A779A0_PD_ALWAYS_ON>;
 			interrupts = <GIC_SPI 133 IRQ_TYPE_LEVEL_HIGH>;
 			linux,uio-name = "ivcp1e_00_00";
+			ipmmu-id = <RCAR_IPMMU_VC0>;
 		};
 
 		ivcp1e_00_01 {
@@ -2870,6 +2927,7 @@
 			power-domains = <&sysc R8A779A0_PD_ALWAYS_ON>;
 			interrupts = <GIC_SPI 134 IRQ_TYPE_LEVEL_HIGH>;
 			linux,uio-name = "ivcp1e_00_01";
+			ipmmu-id = <RCAR_IPMMU_VC0>;
 		};
 
 		isp0: isp@fed00000 {
@@ -2920,6 +2978,7 @@
 			power-domains = <&sysc R8A779A0_PD_A3ISP01>;
 			resets = <&cpg 16>;
 			linux,uio-name = "cisp_00";
+			ipmmu-id = <RCAR_IPMMU_VI0>;
 		};
 
 		tisp0: tisp@fed00000 {
@@ -2930,6 +2989,7 @@
 			power-domains = <&sysc R8A779A0_PD_A3ISP01>;
 			resets = <&cpg 612>;
 			linux,uio-name = "tisp_00";
+			ipmmu-id = <RCAR_IPMMU_VI0>;
 		};
 
 		cisp1: cisp@fee00000 {
@@ -2940,6 +3000,7 @@
 			power-domains = <&sysc R8A779A0_PD_A3ISP01>;
 			resets = <&cpg 17>;
 			linux,uio-name = "cisp_01";
+			ipmmu-id = <RCAR_IPMMU_VI0>;
 		};
 
 		tisp1: tisp@fed20000 {
@@ -2950,6 +3011,7 @@
 			power-domains = <&sysc R8A779A0_PD_A3ISP01>;
 			resets = <&cpg 613>;
 			linux,uio-name = "tisp_01";
+			ipmmu-id = <RCAR_IPMMU_VI0>;
 		};
 
 		cisp2: cisp@fef00000 {
@@ -2960,6 +3022,7 @@
 			power-domains = <&sysc R8A779A0_PD_A3ISP23>;
 			resets = <&cpg 18>;
 			linux,uio-name = "cisp_02";
+			ipmmu-id = <RCAR_IPMMU_VI0>;
 		};
 
 		tisp2: tisp@fed30000 {
@@ -2970,6 +3033,7 @@
 			power-domains = <&sysc R8A779A0_PD_A3ISP23>;
 			resets = <&cpg 614>;
 			linux,uio-name = "tisp_02";
+			ipmmu-id = <RCAR_IPMMU_VI0>;
 		};
 
 		cisp3: cisp@fe400000 {
@@ -2980,6 +3044,7 @@
 			power-domains = <&sysc R8A779A0_PD_A3ISP23>;
 			resets = <&cpg 19>;
 			linux,uio-name = "cisp_03";
+			ipmmu-id = <RCAR_IPMMU_VI0>;
 		};
 
 		tisp3: tisp@fed40000 {
@@ -2990,6 +3055,7 @@
 			power-domains = <&sysc R8A779A0_PD_A3ISP23>;
 			resets = <&cpg 615>;
 			linux,uio-name = "tisp_03";
+			ipmmu-id = <RCAR_IPMMU_VI0>;
 		};
 
 		impldma: dma-controller@f1f00000 {
@@ -3021,6 +3087,7 @@
 			power-domains = <&sysc R8A779A0_PD_A2IMP01>;
 			resets = <&cpg 24>;
 			linux,uio-name = "imp_imp_00";
+			ipmmu-id = <RCAR_IPMMU_IR>;
 		};
 
 		imp1: imp-core@ffa20000 {
@@ -3030,6 +3097,7 @@
 			power-domains = <&sysc R8A779A0_PD_A2IMP01>;
 			resets = <&cpg 25>;
 			linux,uio-name = "imp_imp_01";
+			ipmmu-id = <RCAR_IPMMU_IR>;
 		};
 
 		imp2: imp-core@ffb00000 {
@@ -3039,6 +3107,7 @@
 			power-domains = <&sysc R8A779A0_PD_A2IMP23>;
 			resets = <&cpg 103>;
 			linux,uio-name = "imp_imp_02";
+			ipmmu-id = <RCAR_IPMMU_IR>;
 		};
 
 		imp3: imp-core@ffb20000 {
@@ -3048,6 +3117,7 @@
 			power-domains = <&sysc R8A779A0_PD_A2IMP23>;
 			resets = <&cpg 104>;
 			linux,uio-name = "imp_imp_03";
+			ipmmu-id = <RCAR_IPMMU_IR>;
 		};
 
 		impcve0: imp-cve@ffa40000 {
@@ -3057,6 +3127,7 @@
 			power-domains = <&sysc R8A779A0_PD_A2CV0>;
 			resets = <&cpg 28>;
 			linux,uio-name = "imp_cve_00";
+			ipmmu-id = <RCAR_IPMMU_IR>;
 		};
 
 		impcve1: imp-cve@ffa50000 {
@@ -3066,6 +3137,7 @@
 			power-domains = <&sysc R8A779A0_PD_A2CV1>;
 			resets = <&cpg 29>;
 			linux,uio-name = "imp_cve_01";
+			ipmmu-id = <RCAR_IPMMU_IR>;
 		};
 
 		impcve2: imp-cve@ffb40000 {
@@ -3075,6 +3147,7 @@
 			power-domains = <&sysc R8A779A0_PD_A2CV2>;
 			resets = <&cpg 30>;
 			linux,uio-name = "imp_cve_02";
+			ipmmu-id = <RCAR_IPMMU_IR>;
 		};
 
 		impcve3: imp-cve@ffb50000 {
@@ -3084,6 +3157,7 @@
 			power-domains = <&sysc R8A779A0_PD_A2CV3>;
 			resets = <&cpg 31>;
 			linux,uio-name = "imp_cve_03";
+			ipmmu-id = <RCAR_IPMMU_IR>;
 		};
 
 		impcve4: imp-cve@ffa60000 {
@@ -3093,6 +3167,7 @@
 			power-domains = <&sysc R8A779A0_PD_A2CV4>;
 			resets = <&cpg 100>;
 			linux,uio-name = "imp_cve_04";
+			ipmmu-id = <RCAR_IPMMU_IR>;
 		};
 
 		impcve5: imp-cve@ffb60000 {
@@ -3102,6 +3177,7 @@
 			power-domains = <&sysc R8A779A0_PD_A2CV5>;
 			resets = <&cpg 107>;
 			linux,uio-name = "imp_cve_05";
+			ipmmu-id = <RCAR_IPMMU_IR>;
 		};
 
 		impcve6: imp-cve@ffa70000 {
@@ -3111,6 +3187,7 @@
 			power-domains = <&sysc R8A779A0_PD_A2CV6>;
 			resets = <&cpg 313>;
 			linux,uio-name = "imp_cve_06";
+			ipmmu-id = <RCAR_IPMMU_IR>;
 		};
 
 		impcve7: imp-cve@ffb70000 {
@@ -3120,6 +3197,7 @@
 			power-domains = <&sysc R8A779A0_PD_A2CV7>;
 			resets = <&cpg 314>;
 			linux,uio-name = "imp_cve_07";
+			ipmmu-id = <RCAR_IPMMU_IR>;
 		};
 
 		impdma00: dma-controller@ffa80000 {
@@ -3129,6 +3207,7 @@
 			power-domains = <&sysc R8A779A0_PD_A2DP0>;
 			resets = <&cpg 26>;
 			linux,uio-name = "imp_dma_00_00";
+			ipmmu-id = <RCAR_IPMMU_IR>;
 		};
 
 		impdma01: dma-controller@ffa81000 {
@@ -3138,6 +3217,7 @@
 			power-domains = <&sysc R8A779A0_PD_A2DP0>;
 			resets = <&cpg 26>;
 			linux,uio-name = "imp_dma_00_01";
+			ipmmu-id = <RCAR_IPMMU_IR>;
 		};
 
 		impdma10: dma-controller@ffb80000 {
@@ -3147,6 +3227,7 @@
 			power-domains = <&sysc R8A779A0_PD_A2DP1>;
 			resets = <&cpg 105>;
 			linux,uio-name = "imp_dma_01_00";
+			ipmmu-id = <RCAR_IPMMU_IR>;
 		};
 
 		impdma11: dma-controller@ffb81000 {
@@ -3156,6 +3237,7 @@
 			power-domains = <&sysc R8A779A0_PD_A2DP1>;
 			resets = <&cpg 105>;
 			linux,uio-name = "imp_dma_01_01";
+			ipmmu-id = <RCAR_IPMMU_IR>;
 		};
 
 		imppsc0: imp-psc@ffa84000 {
@@ -3165,6 +3247,7 @@
 			power-domains = <&sysc R8A779A0_PD_A2DP0>;
 			resets = <&cpg 27>;
 			linux,uio-name = "imp_psc_00";
+			ipmmu-id = <RCAR_IPMMU_IR>;
 		};
 
 		imppsc1: imp-psc@ffb84000 {
@@ -3174,6 +3257,7 @@
 			power-domains = <&sysc R8A779A0_PD_A2DP1>;
 			resets = <&cpg 106>;
 			linux,uio-name = "imp_psc_01";
+			ipmmu-id = <RCAR_IPMMU_IR>;
 		};
 
 		impcnn0: imp-cnn@ffaa0000 {
@@ -3183,6 +3267,7 @@
 			power-domains = <&sysc R8A779A0_PD_A1CNN0>;
 			resets = <&cpg 22>;
 			linux,uio-name = "imp_cnn_00";
+			ipmmu-id = <RCAR_IPMMU_IR>;
 		};
 
 		impcnn1: imp-cnn@ffbc0000 {
@@ -3192,6 +3277,7 @@
 			power-domains = <&sysc R8A779A0_PD_A1CNN1>;
 			resets = <&cpg 108>;
 			linux,uio-name = "imp_cnn_01";
+			ipmmu-id = <RCAR_IPMMU_IR>;
 		};
 
 		impcnn2: imp-cnn@ffac0000 {
@@ -3201,6 +3287,7 @@
 			power-domains = <&sysc R8A779A0_PD_A1CNN2>;
 			resets = <&cpg 101>;
 			linux,uio-name = "imp_cnn_02";
+			ipmmu-id = <RCAR_IPMMU_IR>;
 		};
 
 		impspmi0_mem: imp-ram@ed300000 {
